[tool.poetry]
name = "pygments-rose-pine"
version = "1.0.0"
description = "Soho vibes for Pygments"
license = "ISC"
authors = ["Andrea Rondón <andrea.estefania.rv@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/drearondov/pygments-rose-pine"
repository = "https://github.com/drearondov/pygments-rose-pine"
keywords = ["pygments-style", "pygments", "rose-pine", "IPython", "radian"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Pygments",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX :: BSD :: FreeBSD",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development",
]
packages = [{ include = "rosepine.py" }]

[tool.poetry.dependencies]
python = ">=3.9"
pygments = ">=2.13.0"

[tool.poetry.group.dev.dependencies]
tox = ">=3.14.5"
tox-gh-actions = ">=1.1.0"
pytest = ">=7.2.0"
bandit = ">=1.7.4"
myst-parser = ">=0.18.1"
pytest-cov = "^4.1.0"
pytest-stub = "^1.1.0"
coverage = "^7.3.2"

[tool.poetry.plugins."pygments.styles"]
rose-pine = "rosepine:RosePineStyle"
rose-pine-moon = "rosepine:RosePineMoonStyle"
rose-pine-dawn = "rosepine:RosePineDawnStyle"

[tool.coverage.paths]
source = ["rosepine.py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
