[tool.poetry]
name = "pygments-rose-pine"
version = "1.0.1"
description = "Soho vibes for Pygments"
license = "ISC"
authors = ["Andrea Rondón <andrea.estefania.rv@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/drearondov/pygments-rose-pine"
repository = "https://github.com/drearondov/pygments-rose-pine"
keywords = ["pygments-style", "pygments", "rose-pine", "IPython", "radian"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: ISC License (ISCL)",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Operating System :: POSIX :: BSD :: FreeBSD",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development",
]
packages = [
  { include = "rosepine.py", from = "src" },
  { include = "rosepinemoon.py", from = "src" },
  { include = "rosepinedawn.py", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
pygments = ">=2.13.0"
pre-commit = "^3.5.0"

[tool.poetry.group.dev.dependencies]
coverage = ">=7.3.2"
ipython = ">=8.16.1"
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
pytest = ">=7.2.0"
pytest-cov = "^4.1.0"
pytest-stub = "^1.1.0"
tox = ">=3.14.5"
tox-gh-actions = ">=1.1.0"
bandit = ">=1.7.4"
sphinx-autodoc-typehints = "^1.24.0"
furo = "^2023.9.10"

[tool.poetry.plugins."pygments.styles"]
"rose-pine" = "rosepine:RosePineStyle"
"rose-pine-moon" = "rosepinemoon:RosePineMoonStyle"
"rose-pine-dawn" = "rosepinedawn:RosePineDawnStyle"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
